<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".food.FoodDetail">


        <ImageView
            android:id="@+id/firstimage"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/noimage" />

        <LinearLayout
            android:layout_width="@dimen/food_detail_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/food_detail_text_marginTop"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_detail_title"
                android:textSize="@dimen/food_detail_title_textsize"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/likeBtn"
                android:layout_width="@dimen/food_detail_likesize"
                android:layout_height="@dimen/food_detail_likesize"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/emptyheart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/food_detail_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/food_detail_text_marginTop"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/food_detail_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/food_detail_cat_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_addr"
                    android:textSize="@dimen/food_detail_cat_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/addr"
                    android:layout_width="@dimen/food_detail_content_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_addr"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/food_detail_content_textsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/food_detail_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/food_detail_text_marginTop"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/food_detail_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/food_detail_cat_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_tel"
                    android:textSize="@dimen/food_detail_cat_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tel"
                    android:layout_width="@dimen/food_detail_content_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_tel"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/food_detail_content_textsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/food_detail_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/food_detail_text_marginTop"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/food_detail_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/food_detail_cat_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_opentime"
                    android:textSize="@dimen/food_detail_cat_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/opentime"
                    android:layout_width="@dimen/food_detail_content_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_opentime"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/food_detail_content_textsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/food_detail_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/food_detail_text_marginTop"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/food_detail_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/food_detail_cat_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_restdate"
                    android:textSize="@dimen/food_detail_cat_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/restdate"
                    android:layout_width="@dimen/food_detail_content_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_restdate"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/food_detail_content_textsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/food_detail_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/food_detail_text_marginTop"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/food_detail_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/food_detail_cat_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_parking"
                    android:textSize="@dimen/food_detail_cat_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/parking"
                    android:layout_width="@dimen/food_detail_content_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_parking"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/food_detail_content_textsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/food_detail_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/food_detail_text_marginTop"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/food_detail_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/food_detail_cat_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_firstmenu"
                    android:textSize="@dimen/food_detail_cat_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/firstmenu"
                    android:layout_width="@dimen/food_detail_content_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_firstmenu"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/food_detail_content_textsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/food_detail_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/food_detail_text_marginTop"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/food_detail_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/food_detail_cat_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_treatmenu"
                    android:textSize="@dimen/food_detail_cat_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/treatmenu"
                    android:layout_width="@dimen/food_detail_content_width"
                    android:layout_height="wrap_content"
                    android:text="@string/food_detail_treatmenu"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/food_detail_content_textsize" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/food_detail_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/food_detail_text_marginTop"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_detail_overview"
                android:textSize="@dimen/food_detail_cat_textsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_detail_overview"
                android:textColor="@color/gray"
                android:textSize="@dimen/food_detail_content_textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/food_detail_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/food_detail_text_marginTop"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_detail_location"
                android:textSize="@dimen/food_detail_cat_textsize"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginBottom="50dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>